--- a/Halloween Game/App_Data/settings.json
+++ b/Halloween Game/App_Data/settings.json
@@ -1,1 +1,1 @@
-{"DevMode":true,"TaskRate":105.0,"TechRate":30,"TaskDurationModifier":100.0}
+{"DevMode":false,"TaskRate":100.0,"TechRate":50,"TaskDurationModifier":100.0}
